# huffman-archiver

./: CMakeLists.txt  archiver.cpp  archiver.h  buffered_reader.cpp  buffered_reader.h  buffered_writer.cpp  buffered_writer.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  huffman-tool.cpp  huffman_tree.cpp  huffman_tree.h  main.cpp
huflib/: IO_exception.cpp  IO_exception.h  archiver.cpp  archiver.h  buffered_reader.cpp  buffered_reader.h  buffered_writer.cpp  buffered_writer.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  huffman_exception.cpp  huffman_exception.h  huffman_tree.cpp  huffman_tree.h
unit-tests/: tests.cpp
unit-tests/mytests/: random.txt
unit-tests/mytests/txt/: 1.txt  3.txt
